<resources>
    <string name="app_name">DiabeticLog</string>
    <string name="diabeticlog">DiabeticLog</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="introduce_el_pin_de_seguridad">Introduce el pin de seguridad</string>
    <string name="entrar">Entrar</string>
    <string name="comenzar">comenzar!</string>
    <string name="todo">TODO</string>
    <string name="pin_de_seguridad">Pin de seguridad</string>
    <string name="o_reg_strate">o regístrate</string>
    <string name="crea_tu_pin_de_seguridad_para_poder_acceder_a_la_aplicaci_n">Introduce tu pin o crea un pin de seguridad para poder acceder a la aplicación</string>
    <string name="introduce_otra_vez_el_pin">Introduce otra vez el pin</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_aplicacion">MainActivity</string>
    <string name="title_activity_pagina_principal">MainActivity</string>
    <string name="m_nimo_5_n_meros">Mínimo 5 números</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="registro">Registro</string>
    <string name="mis_datos">Mis datos</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="cambiar_pin">Cambiar PIN</string>
    <string name="confirmar_pin">Confirmar PIN</string>
    <string name="nuevo_pin">Nuevo PIN</string>
    <string name="mostrar_pin">Mostrar PIN</string>
    <string name="leer">Leer</string>
    <string name="_0">0.0</string>
    <string name="actividad_del_sue_o">Actividad del sueño</string>
    <string name="tiempo">Tiempo</string>
    <string name="actividad_f_sica">Actividad física</string>
    <string name="ingesta">Alimentación</string>
    <string name="ritmo_card_aco">Ritmo cardíaco</string>
    <string name="estado_emocional">Estado emocional</string>
    <string name="insulina">Insulina</string>
    <string name="cero">0</string>
    <string name="uno">Manténte en forma</string>
    <string name="dos">Controle la ingesta de hidratos de carbono</string>
    <string name="tres">No olvide registrar su insulina diaria</string>
    <string name="cuatro">Controle su glucosa en sangre</string>
    <string name="cinco">Registre más datos</string>
    <string name="seis">¿Cómo te sientes hoy?</string>
    <string name="intensidad">Intensidad</string>
    <string name="baja">Baja</string>
    <string name="alta">Alta</string>
    <string name="calor_as">Calorías</string>
    <string name="tipo_de_actividad">Tipo de actividad</string>
    <string name="registrar_actividad">Registrar actividad</string>
    <string name="fin">Fin</string>
    <string name="fecha">Fecha</string>
    <string name="guardar">Guardar</string>
    <string name="registrar_alimentaci_n">Registrar alimentación</string>
    <string name="hora_de_ingesta">Hora de ingesta</string>
    <string name="por_qu">¿Por qué?</string>
    <string name="demasiado">Demasiado</string>
    <string name="muy">Muy</string>
    <string name="algo">Algo</string>
    <string name="poco">Poco</string>
    <string name="casi_nada">Casi nada</string>
    <string name="selecciona_la_emoci_n_que_sientes">Selecciona la emoción que sientes</string>
    <string name="c_mo_te_sientes">¿Cómo te sientes?</string>
    <string name="elige_la_intensidad">Elige la intensidad</string>
    <string name="hora_aplicaci_n">Hora aplicación</string>
    <string name="registrar_insulina">Registrar insulina</string>
    <string name="aplicaci_n_normal">Aplicación normal</string>
    <string name="aplicaci_n_extra">Aplicación extra</string>
    <string name="insulina_lenta_o_basal">Insulina lenta o basal</string>
    <string name="insulina_r_pida">Insulina rápida</string>
    <string name="insulina_de_acci_n_intermedia">Insulina de acción intermedia</string>
    <string name="n_mero_de_unidades">Número de unidades</string>
    <string name="tipo_de_insulina">Tipo de insulina</string>
    <string name="tipo_de_aplicaci_n">Tipo de aplicación</string>
    <string name="u">uds.</string>
    <string name="n_mero_de_raciones_de_hc">Número de raciones de HC</string>
    <string name="qu_has_comido">¿Qué has comido?</string>
    <string name="consultar_tabla_de_raciones"><u>Consultar tabla de raciones</u></string>
    <string name="saca_foto_de_tu_comida">Saca foto de tu comida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gr_fica_y_datos">Gráfica y datos</string>
    <string name="s_lo_gr_fica">Sólo gráfica</string>
    <string name="s_lo_datos">Sólo datos</string>
    <string name="hora">Hora</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar_alimentaci_n">Editar alimentación</string>
    <string name="editar_insulina">Editar insulina</string>
    <string name="glucosa">Glucosa</string>
    <string name="m_s">Más</string>
    <string name="registrar_ritmo_card_aco">Registrar ritmo cardíaco</string>
    <string name="registrar_sue_o">Registrar sueño</string>
    <string name="registrar_glucosa">Registrar glucosa</string>
    <string name="tienes_el_ciclo_menstrual">¿Tienes el ciclo menstrual?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="glucosa_en_sangre">Glucosa en sangre</string>
    <string name="mg_l">mg/L</string>
    <string name="fin_del_ciclo">Fin del ciclo</string>
    <string name="inicio_del_ciclo">Inicio del ciclo</string>
    <string name="editar_glucosa">Editar glucosa</string>
    <string name="conectar_dispositivos">Conectar dispositivos</string>
    <string name="dispositivos_sincronizados">Mostrar dispositivos sincronizados</string>
    <string name="buscar_dispositivos">Buscar dispositivos</string>
    <string name="estado">Estado:</string>
    <string name="apagar_bluetooth">Apagar Bluetooth</string>
    <string name="encender_bluetooth">Encender Bluetooth</string>

    <!-- Bluetooth BLE -->
    <string name="ble_not_supported">BLE no es soportado</string>
    <string name="label_data">Datos:</string>
    <string name="label_device_address">Dirección MAC:</string>
    <string name="label_state">Estado:</string>
    <string name="no_data">No hay datos</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="title_devices">Escaneo de dispositivo BLE</string>
    <string name="error_bluetooth_not_supported">Bluetooth no es soportado.</string>

    <string name="unknown_device">Dispositivo desconocido</string>
    <string name="unknown_characteristic">Característica desconocida</string>
    <string name="unknown_service">Servicio desconocido</string>

    <!-- Menu items -->
    <string name="menu_connect">Conectar</string>
    <string name="menu_disconnect">Desconectar</string>
    <string name="menu_scan">Escanear</string>
    <string name="menu_stop">Detener</string>


</resources>