<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8EEFD"
    tools:context=".vista.EmotionalState">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_mo_te_sientes"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ImageButton
        android:id="@+id/informacion"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/informacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <EditText
        android:id="@+id/muestraMotivo"
        android:layout_width="308dp"
        android:layout_height="95dp"
        android:background="@drawable/color_borde"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informacion"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/por_qu"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/selecciona_la_emoci_n_que_sientes"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:text="@string/elige_la_intensidad"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <RadioGroup
        android:id="@+id/radioGroupIntensidad"
        android:layout_width="283dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_demasiado"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/demasiado"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_muy"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/muy"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_algo"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/algo"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_poco"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/poco"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_casinada"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/casi_nada"
            android:textColor="#000000"
            android:textSize="16sp" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/anadirEmocion"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/anadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/muestraEmocion"
        android:layout_width="191dp"
        android:layout_height="31dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>