<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8EEFD"
    tools:context=".controlador.Access">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="281dp"
        android:layout_height="61dp"
        android:fontFamily="@font/paprika"
        android:text="@string/bienvenido_a"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1073C3"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/paprika"
        android:text="@string/diabeticlog"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#1073C3"
        android:textSize="54sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:fontFamily="@font/allerta"
        android:gravity="center_horizontal"
        android:text="@string/m_nimo_5_n_meros"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="120dp"
        android:layout_height="59dp"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#1073C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="122dp"
        android:layout_height="59dp"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#1073C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/pinSeg"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="279dp"
           android:layout_height="60dp"
           android:hint="@string/pin_de_seguridad"
           android:textColorHint="#000000"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.652">


           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/password2"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:inputType="numberPassword"
               android:maxLines="1"
               android:textColor="#000000"
               android:textSize="18sp"/>

       </com.google.android.material.textfield.TextInputLayout>


    <TextView
           android:id="@+id/textView"
           android:layout_width="309dp"
           android:layout_height="83dp"
           android:fontFamily="@font/allerta"
           android:gravity="center_horizontal"
           android:text="@string/crea_tu_pin_de_seguridad_para_poder_acceder_a_la_aplicaci_n"
           android:textAppearance="@style/TextAppearance.AppCompat.Body1"
           android:textColor="#000000"
           android:textSize="18sp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.494"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.405" />

</androidx.constraintlayout.widget.ConstraintLayout>